Implemented encoding of operations mov to ret

--- a/assembler/Makefile
+++ b/assembler/Makefile
@@ -1,6 +1,6 @@
 C_SOURCES = $(wildcard src/*.c)
 CC        = /usr/bin/clang
-CFLAGS    = -I ./src/include -Wall -g
+CFLAGS    = -I ./src/include -Wall -Wextra -g
 
 all:
 	$(CC) $(CFLAGS) $(C_SOURCES) -o ../bin/assembler.out
