--- a/assembler/Makefile
+++ b/assembler/Makefile
@@ -4,8 +4,8 @@ CFLAGS    = -I ./src/include -Wall -Wextra -g
 DEBUGGER  = /usr/bin/gdb
 
 debug:
-	$(CC) $(CFLAGS) -g $(C_SOURCES) -o ../bin/celeste.out
-	$(DEBUGGER) ../bin/celeste.out
+	$(CC) $(CFLAGS) -g $(C_SOURCES) -o ../bin/assembler.out
+	$(DEBUGGER) ../bin/assembler.out
 
 all:
 	$(CC) $(CFLAGS) $(C_SOURCES) -o ../bin/assembler.out
